<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_person"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/login"
        />

    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@mipmap/ic_user"
        android:drawablePadding="8dp"
        android:hint="@string/login_user_hint"
        android:singleLine="true"
        android:textColor="#222222"/>
    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@mipmap/ic_lock"
        android:drawablePadding="8dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#222222"/>

    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_login"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/login_sign_up_txt"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:text="@string/login_signup"
        android:textColor="#555"
        android:textSize="14sp"
        />
</LinearLayout>